# docs/swagger.yaml
@@ -35,6 +35,20 @@ definitions:
           type: object
         type: array
     type: object
+  common.CompanyResponse:
+    properties:
+      name:
+        type: string
+      phones:
+        items:
+          $ref: '#/definitions/common.Phone'
+        type: array
+    type: object
+  common.Phone:
+    properties:
+      number:
+        type: string
+    type: object
   handler.errorResponse:
     properties:
       message:
@@ -47,6 +61,56 @@ info:
   title: Catalog App API
   version: 0.0.1
 paths:
+  /api/building/all-company:
+    get:
+      consumes:
+      - application/json
+      description: Get all company registered in a building
+      operationId: getAllCompany
+      parameters:
+      - description: City id
+        in: query
+        name: city_id
+        required: true
+        type: integer
+      - description: Street id
+        in: query
+        name: street_id
+        required: true
+        type: integer
+      - description: House id
+        in: query
+        name: house
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/common.CompanyResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get all company in a building
+      tags:
+      - Building
   /api/company/:
     post:
       consumes:
